# Grafter

./: .gitignore  Dockerfile  README.md  license.txt
examples/AST/: ConstantFolding.h  DesugarDec.h  Print.h  main.cpp  virtual.cpp  virtual.h
examples/RenderTree/: RenderTree.h  ResolveFlexWidths.h  ResolveRelativeWidth.h  SetPositions.h  main.cpp
grafter/: AccessPath.cpp  Annotations.cpp  CMakeLists.txt  DependenceAnalyzer.cpp  DependenceAnalyzer.h  FSMUtility.h  FunctionAnalyzer.cpp  FunctionAnalyzer.h  FunctionsFinder.cpp  FuseTransformation.cpp  FuseTransformation.h  LLVMDependencies.h  Logger.h  RecordAnalyzer.cpp  RecordAnalyzer.h  StatementInfo.cpp  StatementInfo.h  ToolMain.cpp  TraversalSynthesizer.cpp  TraversalSynthesizer.h
grafter-examples/AST/: AST.h  ConstantFolding.h  ConstantPropagationAssigment.h  DesugarDec.h  DesugarInc.h  RemoveUnreachableBranches.h  main.cpp
grafter-examples/AST/UNFUSED/: AST.h  ASTBuilder.h  ConstantFolding.h  ConstantPropagationAssigment.h  DesugarDec.h  DesugarInc.h  Print.h  RemoveUnreachableBranches.h  computeSize.h  main.cpp
grafter-examples/BinaryTree/: BinarySearchTree_virtualsCalls.cpp
grafter-examples/BinaryTree/UNFUSED/: main.cpp
grafter-examples/KDTreeSpatialFunctions/UNFUSED/: main.cpp
grafter-examples/PiecewiseFunctions/: generate_fused_code.sh
grafter-examples/PiecewiseFunctions/UNFUSED/: Makefile  main.cpp
grafter-examples/PieseWiseFunctions/UNFUSED/: Makefile  main.cpp
grafter-examples/RenderTree/: ComputeHeights.h  Print.h  RenderTree.h  ResolveFlexWidths.h  SetFont.h  Types.h  main.cpp
tree-fuser/: AccessPath.cpp  AccessPath.h  Annotations.cpp  CMakeLists.txt  DependenceAnalyzer.cpp  DependenceAnalyzer.h  DependenceGraph.cpp  DependenceGraph.h  FSMUtility.cpp  FSMUtility.h  FunctionAnalyzer.cpp  FunctionAnalyzer.h  FunctionsFinder.h  Functionsfinder.cpp  FuseTransformation.cpp  FuseTransformation.h  LLVMDependencies.h  Logger.cpp  Logger.h  RecordAnalyzer.cpp  RecordAnalyzer.h  StatementInfo.cpp  StatementInfo.h  ToolMain.cpp  TraversalSynthesizer.cpp  TraversalSynthesizer.h
(+16 files in other folders)
